[package]
name = "rust"
version = "0.1.0"
authors = ["Thomas Fisker Christensen <thomas@chrstnsn.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day01"
test = false
bench = false

[[bin]]
name = "day02"
test = false
bench = false

[[bin]]
name = "day03"
test = false
bench = false

[dependencies]
